fix for flickering BS tooltips

--- a/public/scss/main.scss
+++ b/public/scss/main.scss
@@ -162,6 +162,10 @@ code {
 	border-width: 4px !important;
 }
 
+.tooltip {
+	pointer-events: none;
+}
+
 
 
 
